--- a/src/commons/stylus/base.styl
+++ b/src/commons/stylus/base.styl
@@ -12,6 +12,15 @@ body, html
     line-height: 0
     clear: both
     visibility: hidden
+.clear-fix
+  display : inline-block
+  &:after
+    display: block
+    content: ''
+    clear: both
+    height: 0
+    line-height:0
+
 
 @media (-webkit-min-device-pixel-ratio: 1.5),(min-device-pixel-ratio: 1.5)
   .border-1px
